objects/nIQ_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Saved__c</fullName>
        <formula>(Success__c*Minutes_Saved__c)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_Saved__c</fullName>
        <label>Minutes To Be Saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Helpful__c</fullName>
        <label>Not Helpful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <formula>Success__c/(Success__c+Not_Helpful__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <label>Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>nIQ Answer</label>
    <nameField>
        <label>nIQ Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>nIQ Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>